fix visible

--- a/src/components/SongList/SongList.module.scss
+++ b/src/components/SongList/SongList.module.scss
@@ -73,5 +73,8 @@
 .vip {
     padding: 0 4px;
     font-size: 0.7rem;
-    top: -115%;
+    top: -60%;
+}
+.song-infor {
+    overflow: visible;
 }
